fixed support menue opening and not fitting my right side of screen. added retreat menue option, added resign menue

--- a/DiplomacyCSS.css
+++ b/DiplomacyCSS.css
@@ -16,7 +16,7 @@ button:hover {
 input { 
     margin: 5px; 
     height: 15px;
-    width: 90px;    
+    width: 50px;    
 }
 
 .fc {
